// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pages deploy > with wrangler.json configuration > should always deploy to the Pages project specified by the top-level \`name\` configuration field, regardless of the corresponding env-level configuration 1`] = `"2ea0b43fa4411e79883bfbfc1dcb4360d1789067eca64a492604d59b8eab932c"`;

exports[`pages deploy > with wrangler.json configuration > should always deploy to the Pages project specified by the top-level \`name\` configuration field, regardless of the corresponding env-level configuration 2`] = `
"
 ⛅️ wrangler x.x.x
──────────────────
✨ Success! Uploaded 1 files (TIMINGS)

✨ Compiled Worker successfully
✨ Uploading Worker bundle
🌎 Deploying...
✨ Deployment complete! Take a peek over at https://abcxyz.pages-project.pages.dev/"
`;

exports[`pages deploy > with wrangler.json configuration > should error if user attempts to specify a custom config file path 1`] = `[Error: Pages does not support custom paths for the Wrangler configuration file]`;

exports[`pages deploy > with wrangler.json configuration > should support wrangler.json 1`] = `"b6a9158832033622c937859452cd6fe4d9542ec8a863c17aa84f761140b750b9"`;

exports[`pages deploy > with wrangler.json configuration > should support wrangler.json 2`] = `
"
 ⛅️ wrangler x.x.x
──────────────────
✨ Success! Uploaded 1 files (TIMINGS)

✨ Compiled Worker successfully
✨ Uploading Worker bundle
🌎 Deploying...
✨ Deployment complete! Take a peek over at https://abcxyz.pages-is-awesome.pages.dev/"
`;

exports[`pages deploy > with wrangler.json configuration > should warn and ignore the config file, if it doesn't specify the \`pages_build_output_dir\` field 1`] = `[Error: Must specify a project name.]`;

exports[`pages deploy > with wrangler.toml configuration > should always deploy to the Pages project specified by the top-level \`name\` configuration field, regardless of the corresponding env-level configuration 1`] = `"9cdc186bcdd9f2c3e379a0e31790496594a1e7a3b230327f4ea4d1933df6295f"`;

exports[`pages deploy > with wrangler.toml configuration > should always deploy to the Pages project specified by the top-level \`name\` configuration field, regardless of the corresponding env-level configuration 2`] = `
"
 ⛅️ wrangler x.x.x
──────────────────
✨ Success! Uploaded 1 files (TIMINGS)

✨ Compiled Worker successfully
✨ Uploading Worker bundle
🌎 Deploying...
✨ Deployment complete! Take a peek over at https://abcxyz.pages-project.pages.dev/"
`;

exports[`pages deploy > with wrangler.toml configuration > should error if user attempts to specify a custom config file path 1`] = `[Error: Pages does not support custom paths for the Wrangler configuration file]`;

exports[`pages deploy > with wrangler.toml configuration > should support wrangler.toml 1`] = `"5085adb9e258587b8f222ed38cb6ac728f888ee7fd9e6365f7ddf4b26cb76d39"`;

exports[`pages deploy > with wrangler.toml configuration > should support wrangler.toml 2`] = `
"
 ⛅️ wrangler x.x.x
──────────────────
✨ Success! Uploaded 1 files (TIMINGS)

✨ Compiled Worker successfully
✨ Uploading Worker bundle
🌎 Deploying...
✨ Deployment complete! Take a peek over at https://abcxyz.pages-is-awesome.pages.dev/"
`;

exports[`pages deploy > with wrangler.toml configuration > should warn and ignore the config file, if it doesn't specify the \`pages_build_output_dir\` field 1`] = `[Error: Must specify a project name.]`;
